<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textColor="#FFFFFFFF"
            android:text="@string/app_name"
            android:textSize="22sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <View
            android:id="@+id/dialog_center_view"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_centerInParent="true" />

        <Button
            android:id="@+id/positiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_toLeftOf="@+id/dialog_center_view"
            android:ems="6"
            android:gravity="center"
            android:text="@string/home_fragment_modify_call_cacle"
            android:textColor="@drawable/contact_dialog_text_selector"
            android:background="@color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/negativeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:layout_toRightOf="@+id/dialog_center_view"
            android:ems="6"
            android:gravity="center"
            android:text="@string/home_fragment_modify_call_commit"
            android:textColor="@drawable/contact_dialog_text_selector"
            android:background="@color/white"
            android:textSize="25sp" />
    </RelativeLayout>
</LinearLayout>
