<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/transparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/live_setting_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:text="@string/home_fragment_modify_call_msg"
            android:textColor="@color/base_red_color"
            android:textSize="@dimen/text_size_20" />

        <LinearLayout
            android:id="@+id/live_setting_groupname_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/live_setting_groupname_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/magin_60"
                android:text="@string/home_fragment_modify_call_msg_name"
                android:textColor="@color/base_red_color"
                android:textSize="@dimen/text_size_16" />

            <EditText
                android:id="@+id/constacts_msg_name_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/magin_5"
                android:layout_marginRight="@dimen/magin_60"
                android:ems="15"
                android:textSize="@dimen/text_size_20" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/live_setting_notice_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/magin_5">

            <TextView
                android:id="@+id/live_setting_noticeinfo_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/magin_60"
                android:text="@string/home_fragment_modify_call_msg_phone"
                android:textColor="@color/base_red_color"
                android:textSize="@dimen/text_size_16" />

            <EditText
                android:id="@+id/constacts_msg_number_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/magin_5"
                android:layout_marginRight="@dimen/magin_60"
                android:ems="16"
                android:inputType="number"
                android:textSize="@dimen/text_size_16" />

        </LinearLayout>

        <Button
            android:id="@+id/contacts_call_commit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:layout_marginLeft="@dimen/magin_40"
            android:layout_marginRight="@dimen/magin_40"

            android:layout_marginTop="@dimen/magin_20"
            android:background="@color/base_red_color"
            android:text="@string/home_fragment_modify_call_commit"
            android:textColor="@color/white" />
    </LinearLayout>


</LinearLayout>