<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/magin_8"
        android:paddingTop="@dimen/magin_8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/ll_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/magin_42"
                    android:clickable="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/home_center_icon"
                        android:layout_height="@dimen/home_center_icon"
                        android:scaleType="centerInside"
                        android:src="@drawable/home_policy_bg" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-2dp"
                        android:text="@string/home_fragment_policy_str"
                        android:textColor="@color/base_red_color"
                        android:textSize="@dimen/text_size_18" />
                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_transaction_query"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/home_center_icon"
                    android:layout_height="@dimen/home_center_icon"
                    android:scaleType="centerInside"
                    android:src="@drawable/home_card_icon" />
`
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-2dp"
                    android:text="@string/home_fragment_query_str"
                    android:textColor="@color/base_red_color"
                    android:textSize="@dimen/text_size_18" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/ll_rights"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/magin_42"
                    android:clickable="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/home_center_icon"
                        android:layout_height="@dimen/home_center_icon"
                        android:scaleType="centerInside"
                        android:src="@drawable/home_maintain_bg" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-2dp"
                        android:text="@string/home_fragment_maintain_str"
                        android:textColor="@color/base_red_color"
                        android:textSize="@dimen/text_size_18" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/padding_top_2">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/ll_announcement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/magin_42"
                    android:clickable="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/home_center_icon"
                        android:layout_height="@dimen/home_center_icon"
                        android:scaleType="centerInside"
                        android:src="@drawable/home_notice_bg" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-2dp"
                        android:text="@string/home_fragment_notice_str"
                        android:textColor="@color/base_red_color"
                        android:textSize="@dimen/text_size_18" />
                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_oldservice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/home_center_icon"
                    android:layout_height="@dimen/home_center_icon"
                    android:scaleType="centerInside"
                    android:src="@drawable/oldservice" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-2dp"
                    android:text="@string/home_fragment_oldservice_str"
                    android:textColor="@color/base_red_color"
                    android:textSize="18sp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/ll_oldconsult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/magin_42"
                    android:clickable="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="@dimen/home_center_icon"
                        android:layout_height="@dimen/home_center_icon"
                        android:scaleType="centerInside"
                        android:src="@drawable/oldconsult" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-2dp"
                        android:text="@string/home_fragment_old_consult_str"
                        android:textColor="@color/base_red_color"
                        android:textSize="@dimen/text_size_18" />
                </LinearLayout>
            </RelativeLayout>
            <!--  <RelativeLayout
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1">

                  <LinearLayout
                      android:id="@+id/ll_dynamic"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:clickable="true"
                      android:layout_alignParentRight="true"
                      android:layout_marginRight="@dimen/magin_42"
                      android:gravity="center_horizontal"
                      android:orientation="vertical">

                      <ImageView
                          android:id="@+id/imageView"
                          android:layout_width="@dimen/home_center_icon"
                          android:layout_height="@dimen/home_center_icon"
                          android:scaleType="centerInside"
                          android:src="@drawable/error" />

                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/home_fragment_district_str"
                          android:layout_marginTop="-2dp"
                          android:textColor="@color/base_red_color"
                          android:textSize="@dimen/text_size_18" />
                  </LinearLayout>
              </RelativeLayout>-->
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_call_line"
        android:background="#eeeeee">

        <TextView
            android:id="@+id/home_fragment_telphone_tip_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="最新资讯"
            android:textColor="@color/base_red_color"
            android:textSize="@dimen/text_size_15" />

        <View
            android:layout_width="@dimen/home_call_line_left"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/home_fragment_telphone_tip_tv"
            android:background="@color/base_red_color" />

        <View
            android:layout_width="@dimen/home_call_line_left"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/magin_10"
            android:layout_toRightOf="@+id/home_fragment_telphone_tip_tv"
            android:background="@color/base_red_color" />
    </RelativeLayout>
</LinearLayout>